--- a/Michael_HW_01_Jupytar.ipynb
+++ b/Michael_HW_01_Jupytar.ipynb
@@ -18,6 +18,7 @@
    "outputs": [],
    "source": [
     "# __Name:__ \\<Hsin Sheng Ma (Michael)\\>\n",
+    "# This is my honmework 1 file\n",
     "#__Date:__ `{Python} using Dates; today(10/2/2024)`"
    ]
   },
