This is the updated version

--- a/Michael_HW_01_Jupytar.ipynb
+++ b/Michael_HW_01_Jupytar.ipynb
@@ -19,7 +19,8 @@
    "source": [
     "# __Name:__ \\<Hsin Sheng Ma (Michael)\\>\n",
     "# This is my honmework 1 file\n",
-    "#__Date:__ `{Python} using Dates; today(10/2/2024)`"
+    "#__Date:__ `{Python} using Dates; today(10/2/2024)`\n",
+    "# This is the first try"
    ]
   },
   {
