This is the update

--- a/Michael_HW_02_Jupytar.ipynb
+++ b/Michael_HW_02_Jupytar.ipynb
@@ -20,7 +20,8 @@
     "# __Name:__ \\<Hsin Sheng Ma (Michael)\\>\n",
     "# This is my honmework 2 file\n",
     "#__Date:__ `{Python} using Dates; today(10/9/2024)`\n",
-    "# This is the first try"
+    "# This is the first try\n",
+    "# Hi this is michek"
    ]
   }
  ],
