--- a/Michael_HW_02_Jupytar.ipynb
+++ b/Michael_HW_02_Jupytar.ipynb
@@ -21,7 +21,7 @@
     "# This is my honmework 2 file\n",
     "#__Date:__ `{Python} using Dates; today(10/9/2024)`\n",
     "# This is the first try\n",
-    "# Hi this is michek"
+    "# Hi this is michaeljsadhjiahdahdjkahdjkahndjkah"
    ]
   }
  ],
