--- a/Michael_HW_02_Jupytar.ipynb
+++ b/Michael_HW_02_Jupytar.ipynb
@@ -23,6 +23,18 @@
     "# This is the first try\n",
     "# Hi this is michaeljsadhjiahdahdjkahdjkahndjkah"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ## Task 1 - NRI Data Cleaning\n",
+    "\n",
+    "# __1. Import the NRI data. Ensure that the [FIPS code](https://en.wikipedia.org/wiki/Federal_Information_Processing_Standard_state_code) \\\n",
+    "#     variable ('STCOFIPS') is correctly identified as a string / character variable. Otherwise, the leading zeros will be removed.__\n"
+   ]
   }
  ],
  "metadata": {
