--- a/Homework/HW_01.ipynb
+++ b/Homework/HW_01.ipynb
@@ -19,8 +19,7 @@
    "source": [
     "# __Name:__ \\<Hsin Sheng Ma (Michael)\\>\n",
     "# This is my honmework 1 file\n",
-    "#__Date:__ `{Python} using Dates; today(10/2/2024)`\n",
-    "# This is the first try"
+    "#__Date:__ `{Python} using Dates; today(10/2/2024)`"
    ]
   },
   {
