--- a/Homework/HW_01.ipynb
+++ b/Homework/HW_01.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "# __Name:__ \\<Hsin Sheng Ma (Michael)\\>\n",
-    "# This is my honmework 1 file\n",
+    "# This is my honmework 1 file submission\n",
     "#__Date:__ `{Python} using Dates; today(10/2/2024)`"
    ]
   },
