Homework one update

--- a/Homework/HW_01.ipynb
+++ b/Homework/HW_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,20 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(np.float64(1.8887740380248257), np.float64(0.9245628058068244))"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def sim(iteration):\n",
     "\n",
@@ -75,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,27 +73,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(np.float64(1.0831892093292488), np.float64(0.7275493815740669))"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sim(10000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,87 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10000 of simulation takes 0.00040640000224811956 seconds with 24606299.07648154 per second\n",
-      "100000 of simulation takes 0.0032864999993762467 seconds with 30427506.47162004 per second\n",
-      "1000000 of simulation takes 0.031754700001329184 seconds with 31491401.27156428 per second\n",
-      "10000000 of simulation takes 0.3054197000019485 seconds with 32741830.340139166 per second\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>num_iteration</th>\n",
-       "      <th>Duration</th>\n",
-       "      <th>num_of_sim_per_sec</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10000</td>\n",
-       "      <td>0.000406</td>\n",
-       "      <td>2.460630e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>100000</td>\n",
-       "      <td>0.003286</td>\n",
-       "      <td>3.042751e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1000000</td>\n",
-       "      <td>0.031755</td>\n",
-       "      <td>3.149140e+07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10000000</td>\n",
-       "      <td>0.305420</td>\n",
-       "      <td>3.274183e+07</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   num_iteration  Duration  num_of_sim_per_sec\n",
-       "0          10000  0.000406        2.460630e+07\n",
-       "1         100000  0.003286        3.042751e+07\n",
-       "2        1000000  0.031755        3.149140e+07\n",
-       "3       10000000  0.305420        3.274183e+07"
-      ]
-     },
-     "execution_count": 118,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Set an empty dataframe\n",
     "table = []\n",
@@ -224,6 +124,37 @@
     "\n",
     "result = pd.DataFrame(table, columns=['num_iteration','Duration','num_of_sim_per_sec'])\n",
     "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nbconvert import HTMLExporter\n",
+    "import nbformat\n",
+    "\n",
+    "# Load the uploaded Jupyter notebook file\n",
+    "notebook_filename = \"C:/users/hma/code/Michael_Homework/Intro_ML_2024Fall/homework/HW_01.ipynb\"\n",
+    "\n",
+    "# Read the notebook content\n",
+    "with open(notebook_filename, \"r\", encoding=\"utf-8\") as f:\n",
+    "    notebook_content = nbformat.read(f, as_version=4)\n",
+    "\n",
+    "# # Create an HTML exporter\n",
+    "html_exporter = HTMLExporter()\n",
+    "html_exporter.exclude_input = False  # Include code inputs in the exported HTML\n",
+    "\n",
+    "# Export the notebook to HTML format\n",
+    "(body, resources) = html_exporter.from_notebook_node(notebook_content)\n",
+    "\n",
+    "# Define the output HTML filename\n",
+    "output_html_filename = \"HW_01.html\"\n",
+    "\n",
+    "# Save the HTML output to a file\n",
+    "with open(output_html_filename, \"w\", encoding=\"utf-8\") as f:\n",
+    "    f.write(body)\n"
    ]
   }
  ],
