Update homework progress

--- a/hw_progress/HW_03.ipynb
+++ b/hw_progress/HW_03.ipynb
@@ -2,15 +2,456 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Homework 3 \n",
+    "##### The CDC Social Vulnerability Index (SVI) takes multiple differen population-level inputs (e.g., % of the population living in poverty, % of the population without health insurance) to identify particularly vulnerable counties. While the CDC SVI scores rely on adding up the percentiles of various characteristics, there are alternative indexes (e.g., [University of South Carolina SoVI index](https://sc.edu/study/colleges_schools/artsandsciences/centers_and_institutes/hvri/data_and_resources/sovi/index.php)) that use methods like PCA.Here, we are going to use the CDC SVI data to create an alternative index based on PCA."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NRI = pd.read_csv('NRI_Table_Counties.csv', dtype={'STCOFIPS': str})\n",
+    "NRI = NRI.fillna(0)\n",
+    "\n",
+    "SVI = pd.read_csv('SVI_2022_US_county.csv', dtype={'FIPS':str})\n",
+    "SVI = SVI.fillna(0)\n",
+    "\n",
+    "Merge_SVI_NRI = pd.merge(NRI, SVI, left_on='STCOFIPS', right_on='FIPS', how= 'outer')\n",
+    "Merge_SVI_NRI = Merge_SVI_NRI.fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### The following variables are used in the SVI:\n",
+    "##### `EP_POV150, EP_UNEMP, EP_HBURD, EP_NOHSDP, EP_UNINSUR, EP_AGE65, EP_AGE17, EP_DISABL, EP_SNGPNT, EP_LIMENG, EP_MINRTY, EP_MUNIT, EP_MOBILE, EP_CROWD, EP_NOVEH, EP_GROUPQ, EP_NOINT`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col_for_pca = [\n",
+    "    \"EP_POV150\", \"EP_UNEMP\", \"EP_HBURD\", \"EP_NOHSDP\", \"EP_UNINSUR\", \n",
+    "    \"EP_AGE65\", \"EP_AGE17\", \"EP_DISABL\", \"EP_SNGPNT\", \"EP_LIMENG\", \n",
+    "    \"EP_MINRTY\", \"EP_MUNIT\", \"EP_MOBILE\", \"EP_CROWD\", \"EP_NOVEH\", \n",
+    "    \"EP_GROUPQ\", \"EP_NOINT\"\n",
+    "]\n",
+    "\n",
+    "Merge_SVI_NRI_pca = Merge_SVI_NRI[col_for_pca]\n",
+    "Merge_SVI_NRI_pca"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Note: Typically variables should be standardized to have mean 0 and variance 1 before performing PCA. Most software packages for performing PCA automatically do this or include this as a function argument. Check the function / package documentation to determine whether this standardization is happening and standardize the data if it is not automatic."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>EP_POV150</th>\n",
+       "      <th>EP_UNEMP</th>\n",
+       "      <th>EP_HBURD</th>\n",
+       "      <th>EP_NOHSDP</th>\n",
+       "      <th>EP_UNINSUR</th>\n",
+       "      <th>EP_AGE65</th>\n",
+       "      <th>EP_AGE17</th>\n",
+       "      <th>EP_DISABL</th>\n",
+       "      <th>EP_SNGPNT</th>\n",
+       "      <th>EP_LIMENG</th>\n",
+       "      <th>EP_MINRTY</th>\n",
+       "      <th>EP_MUNIT</th>\n",
+       "      <th>EP_MOBILE</th>\n",
+       "      <th>EP_CROWD</th>\n",
+       "      <th>EP_NOVEH</th>\n",
+       "      <th>EP_GROUPQ</th>\n",
+       "      <th>EP_NOINT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.330535</td>\n",
+       "      <td>-0.777697</td>\n",
+       "      <td>-0.241896</td>\n",
+       "      <td>-0.285066</td>\n",
+       "      <td>-0.348230</td>\n",
+       "      <td>-0.604496</td>\n",
+       "      <td>0.422643</td>\n",
+       "      <td>0.132227</td>\n",
+       "      <td>0.013707</td>\n",
+       "      <td>-0.437720</td>\n",
+       "      <td>0.140476</td>\n",
+       "      <td>-0.143970</td>\n",
+       "      <td>0.394735</td>\n",
+       "      <td>-0.379533</td>\n",
+       "      <td>-0.412078</td>\n",
+       "      <td>-0.571979</td>\n",
+       "      <td>-0.758737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.536793</td>\n",
+       "      <td>-0.544926</td>\n",
+       "      <td>0.319685</td>\n",
+       "      <td>-0.486133</td>\n",
+       "      <td>0.013107</td>\n",
+       "      <td>0.357219</td>\n",
+       "      <td>-0.009413</td>\n",
+       "      <td>-0.343918</td>\n",
+       "      <td>-0.529791</td>\n",
+       "      <td>-0.284449</td>\n",
+       "      <td>-0.336030</td>\n",
+       "      <td>2.002356</td>\n",
+       "      <td>-0.175655</td>\n",
+       "      <td>-0.166060</td>\n",
+       "      <td>-0.791841</td>\n",
+       "      <td>-0.432828</td>\n",
+       "      <td>-0.758737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.569207</td>\n",
+       "      <td>0.386154</td>\n",
+       "      <td>0.624543</td>\n",
+       "      <td>2.043952</td>\n",
+       "      <td>0.279356</td>\n",
+       "      <td>0.116790</td>\n",
+       "      <td>-0.107608</td>\n",
+       "      <td>0.456006</td>\n",
+       "      <td>2.226522</td>\n",
+       "      <td>0.175362</td>\n",
+       "      <td>1.515955</td>\n",
+       "      <td>-0.566475</td>\n",
+       "      <td>1.831275</td>\n",
+       "      <td>0.645134</td>\n",
+       "      <td>1.308022</td>\n",
+       "      <td>2.002314</td>\n",
+       "      <td>1.971787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.624764</td>\n",
+       "      <td>1.511210</td>\n",
+       "      <td>0.319685</td>\n",
+       "      <td>1.641819</td>\n",
+       "      <td>-0.158053</td>\n",
+       "      <td>-0.398414</td>\n",
+       "      <td>-0.009413</td>\n",
+       "      <td>0.741692</td>\n",
+       "      <td>0.634848</td>\n",
+       "      <td>-0.476038</td>\n",
+       "      <td>0.061877</td>\n",
+       "      <td>-0.346772</td>\n",
+       "      <td>1.979154</td>\n",
+       "      <td>-0.422227</td>\n",
+       "      <td>0.369786</td>\n",
+       "      <td>0.703571</td>\n",
+       "      <td>0.456281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.037432</td>\n",
+       "      <td>0.463744</td>\n",
+       "      <td>-0.290031</td>\n",
+       "      <td>1.155909</td>\n",
+       "      <td>0.184267</td>\n",
+       "      <td>-0.140812</td>\n",
+       "      <td>0.344087</td>\n",
+       "      <td>0.246502</td>\n",
+       "      <td>-0.102757</td>\n",
+       "      <td>0.251998</td>\n",
+       "      <td>-0.503052</td>\n",
+       "      <td>-0.650976</td>\n",
+       "      <td>1.271447</td>\n",
+       "      <td>0.004717</td>\n",
+       "      <td>-0.233366</td>\n",
+       "      <td>-0.548787</td>\n",
+       "      <td>0.025146</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3235</th>\n",
+       "      <td>-2.523380</td>\n",
+       "      <td>-1.863957</td>\n",
+       "      <td>-3.402790</td>\n",
+       "      <td>-1.893597</td>\n",
+       "      <td>-1.755545</td>\n",
+       "      <td>-3.283560</td>\n",
+       "      <td>-4.172868</td>\n",
+       "      <td>-2.991282</td>\n",
+       "      <td>-2.160286</td>\n",
+       "      <td>-0.590991</td>\n",
+       "      <td>-1.205529</td>\n",
+       "      <td>-0.803078</td>\n",
+       "      <td>-1.253060</td>\n",
+       "      <td>-0.977255</td>\n",
+       "      <td>-1.305637</td>\n",
+       "      <td>-0.780706</td>\n",
+       "      <td>-2.182791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3236</th>\n",
+       "      <td>-2.523380</td>\n",
+       "      <td>-1.863957</td>\n",
+       "      <td>-3.402790</td>\n",
+       "      <td>-1.893597</td>\n",
+       "      <td>-1.755545</td>\n",
+       "      <td>-3.283560</td>\n",
+       "      <td>-4.172868</td>\n",
+       "      <td>-2.991282</td>\n",
+       "      <td>-2.160286</td>\n",
+       "      <td>-0.590991</td>\n",
+       "      <td>-1.205529</td>\n",
+       "      <td>-0.803078</td>\n",
+       "      <td>-1.253060</td>\n",
+       "      <td>-0.977255</td>\n",
+       "      <td>-1.305637</td>\n",
+       "      <td>-0.780706</td>\n",
+       "      <td>-2.182791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3237</th>\n",
+       "      <td>-2.523380</td>\n",
+       "      <td>-1.863957</td>\n",
+       "      <td>-3.402790</td>\n",
+       "      <td>-1.893597</td>\n",
+       "      <td>-1.755545</td>\n",
+       "      <td>-3.283560</td>\n",
+       "      <td>-4.172868</td>\n",
+       "      <td>-2.991282</td>\n",
+       "      <td>-2.160286</td>\n",
+       "      <td>-0.590991</td>\n",
+       "      <td>-1.205529</td>\n",
+       "      <td>-0.803078</td>\n",
+       "      <td>-1.253060</td>\n",
+       "      <td>-0.977255</td>\n",
+       "      <td>-1.305637</td>\n",
+       "      <td>-0.780706</td>\n",
+       "      <td>-2.182791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3238</th>\n",
+       "      <td>-2.523380</td>\n",
+       "      <td>-1.863957</td>\n",
+       "      <td>-3.402790</td>\n",
+       "      <td>-1.893597</td>\n",
+       "      <td>-1.755545</td>\n",
+       "      <td>-3.283560</td>\n",
+       "      <td>-4.172868</td>\n",
+       "      <td>-2.991282</td>\n",
+       "      <td>-2.160286</td>\n",
+       "      <td>-0.590991</td>\n",
+       "      <td>-1.205529</td>\n",
+       "      <td>-0.803078</td>\n",
+       "      <td>-1.253060</td>\n",
+       "      <td>-0.977255</td>\n",
+       "      <td>-1.305637</td>\n",
+       "      <td>-0.780706</td>\n",
+       "      <td>-2.182791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3239</th>\n",
+       "      <td>-2.523380</td>\n",
+       "      <td>-1.863957</td>\n",
+       "      <td>-3.402790</td>\n",
+       "      <td>-1.893597</td>\n",
+       "      <td>-1.755545</td>\n",
+       "      <td>-3.283560</td>\n",
+       "      <td>-4.172868</td>\n",
+       "      <td>-2.991282</td>\n",
+       "      <td>-2.160286</td>\n",
+       "      <td>-0.590991</td>\n",
+       "      <td>-1.205529</td>\n",
+       "      <td>-0.803078</td>\n",
+       "      <td>-1.253060</td>\n",
+       "      <td>-0.977255</td>\n",
+       "      <td>-1.305637</td>\n",
+       "      <td>-0.780706</td>\n",
+       "      <td>-2.182791</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3240 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      EP_POV150  EP_UNEMP  EP_HBURD  EP_NOHSDP  EP_UNINSUR  EP_AGE65  \\\n",
+       "0     -0.330535 -0.777697 -0.241896  -0.285066   -0.348230 -0.604496   \n",
+       "1     -0.536793 -0.544926  0.319685  -0.486133    0.013107  0.357219   \n",
+       "2      1.569207  0.386154  0.624543   2.043952    0.279356  0.116790   \n",
+       "3      0.624764  1.511210  0.319685   1.641819   -0.158053 -0.398414   \n",
+       "4     -0.037432  0.463744 -0.290031   1.155909    0.184267 -0.140812   \n",
+       "...         ...       ...       ...        ...         ...       ...   \n",
+       "3235  -2.523380 -1.863957 -3.402790  -1.893597   -1.755545 -3.283560   \n",
+       "3236  -2.523380 -1.863957 -3.402790  -1.893597   -1.755545 -3.283560   \n",
+       "3237  -2.523380 -1.863957 -3.402790  -1.893597   -1.755545 -3.283560   \n",
+       "3238  -2.523380 -1.863957 -3.402790  -1.893597   -1.755545 -3.283560   \n",
+       "3239  -2.523380 -1.863957 -3.402790  -1.893597   -1.755545 -3.283560   \n",
+       "\n",
+       "      EP_AGE17  EP_DISABL  EP_SNGPNT  EP_LIMENG  EP_MINRTY  EP_MUNIT  \\\n",
+       "0     0.422643   0.132227   0.013707  -0.437720   0.140476 -0.143970   \n",
+       "1    -0.009413  -0.343918  -0.529791  -0.284449  -0.336030  2.002356   \n",
+       "2    -0.107608   0.456006   2.226522   0.175362   1.515955 -0.566475   \n",
+       "3    -0.009413   0.741692   0.634848  -0.476038   0.061877 -0.346772   \n",
+       "4     0.344087   0.246502  -0.102757   0.251998  -0.503052 -0.650976   \n",
+       "...        ...        ...        ...        ...        ...       ...   \n",
+       "3235 -4.172868  -2.991282  -2.160286  -0.590991  -1.205529 -0.803078   \n",
+       "3236 -4.172868  -2.991282  -2.160286  -0.590991  -1.205529 -0.803078   \n",
+       "3237 -4.172868  -2.991282  -2.160286  -0.590991  -1.205529 -0.803078   \n",
+       "3238 -4.172868  -2.991282  -2.160286  -0.590991  -1.205529 -0.803078   \n",
+       "3239 -4.172868  -2.991282  -2.160286  -0.590991  -1.205529 -0.803078   \n",
+       "\n",
+       "      EP_MOBILE  EP_CROWD  EP_NOVEH  EP_GROUPQ  EP_NOINT  \n",
+       "0      0.394735 -0.379533 -0.412078  -0.571979 -0.758737  \n",
+       "1     -0.175655 -0.166060 -0.791841  -0.432828 -0.758737  \n",
+       "2      1.831275  0.645134  1.308022   2.002314  1.971787  \n",
+       "3      1.979154 -0.422227  0.369786   0.703571  0.456281  \n",
+       "4      1.271447  0.004717 -0.233366  -0.548787  0.025146  \n",
+       "...         ...       ...       ...        ...       ...  \n",
+       "3235  -1.253060 -0.977255 -1.305637  -0.780706 -2.182791  \n",
+       "3236  -1.253060 -0.977255 -1.305637  -0.780706 -2.182791  \n",
+       "3237  -1.253060 -0.977255 -1.305637  -0.780706 -2.182791  \n",
+       "3238  -1.253060 -0.977255 -1.305637  -0.780706 -2.182791  \n",
+       "3239  -1.253060 -0.977255 -1.305637  -0.780706 -2.182791  \n",
+       "\n",
+       "[3240 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "standardized = StandardScaler()\n",
+    "standardized_data = standardized.fit_transform(Merge_SVI_NRI_pca)\n",
+    "standardized_df = pd.DataFrame(standardized_data, columns=Merge_SVI_NRI_pca.columns)\n",
+    "standardized_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Perform PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variance_Ratio [0.33805606 0.16255378 0.09332575 0.07113107 0.05617679 0.05009247\n",
+      " 0.04108385 0.03099315 0.02907729 0.02593005 0.0219471  0.01890599\n",
+      " 0.01708647 0.01404918 0.01220545 0.00904321 0.00834234]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Perform PCA\n",
+    "pca = PCA() \n",
+    "SVI_pca_result = pca.fit_transform(standardized_data)\n",
+    "\n",
+    "# Convert to dataframe for better viewing\n",
+    "pca_df = pd.DataFrame(SVI_pca_result)\n",
+    "pca_df\n",
+    "\n",
+    "print('Variance_Ratio', pca.explained_variance_ratio_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Plot the eigenvectors or loadings associated of the first three principal components. Make sure that the axis labels correspond to the variable names and not the indices of the variables. How would you interpret the first three prinicpal components? Note: you can find the documentation for the SVI variables [here](https://www.atsdr.cdc.gov/placeandhealth/svi/documentation/SVI_documentation_2022.html)."
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
