Update homework folder

--- a/hw_progress/HW_03.ipynb
+++ b/hw_progress/HW_03.ipynb
@@ -478,6 +478,47 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### There are several different ways to determine the number of principal components to retain. One common method is to retain principal components that explain a certain percentage of the variance in the data. a. How many principal components are needed to explain 80% of the variance in the data? b. How many principal components are needed to explain 90% of the variance in the data?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.33805606 0.50060984 0.59393559 0.66506666 0.72124345 0.77133592\n",
+      " 0.81241977 0.84341292 0.87249021 0.89842026 0.92036736 0.93927335\n",
+      " 0.95635982 0.970409   0.98261445 0.99165766 1.        ]\n",
+      "--------------------\n",
+      "The result shows that we need at least 7 PCs to explain 80 % of the variation\n",
+      "--------------------\n",
+      "The result shows that we need at least 10 PCs to explain 90 % of the variation\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(explained_variance_ratio.cumsum())\n",
+    "print(\"--------------------\")\n",
+    "print(\"The result shows that we need at least 7 PCs to explain 80 % of the variation\")\n",
+    "print(\"--------------------\")\n",
+    "print(\"The result shows that we need at least 10 PCs to explain 90 % of the variation\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### An alternative approach is to plot the eigenvalues of the principal components and retain the components that are above the \"elbow\" in the plot. In other words the eigenvalues that are substantially larger than the rest. a. Create a [scree plot](https://en.wikipedia.org/wiki/Scree_plot) of the eigenvalues of the principal components.a. How many principal components should be retained based on the scree plot? This video may help: [PCA Scree Plot](https://youtu.be/vFUvNICWVz4?si=6NbyRcLRGT8L1HzI)"
+   ]
   }
  ],
  "metadata": {
