Update homework 3 progress

--- a/hw_progress/HW_03.ipynb
+++ b/hw_progress/HW_03.ipynb
@@ -883,11 +883,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This is the functiob for singular value decomposition\n",
+    "# This is the functiob for singular value decomposition (This function goes into the pca error function below)\n",
     "def pca_approx(X, k):\n",
     "    U, S, Vt = np.linalg.svd(X, full_matrices=False)\n",
     "    Uk = U[:, :k]\n",
@@ -902,6 +902,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This function creates fold matrix (A matrix with random number. For example, if folds = 3, then fold one chooses the element in the fold matrix where the\n",
+    "# values are 1. Ex. we have folds[0,0] = 1, then the original dat matrix X[0,0] = 1.2 will be assigned as missing, then we calculate the row 0's average from the original matrix x, \n",
+    "# and replace the X[0,0] wiht this average value. Then, the code subtract the original X[0,0] = 1.2 from the new X[0,0] = avegrae and square \n",
+    "# to get the error for this row (Xhat[0,0] - X[0,0])^2 =  Error for this col. The code then go through the same process for each column and ultimately\n",
+    "# Sum all the Error of each column and get the total Error Fold 1. Fold 2 uses the same logic.\n",
+    "\n",
     "def pca_cv_error(X, k, folds):\n",
     "    fs = np.unique(folds)\n",
     "\n",
@@ -948,13 +954,13 @@
     "\n",
     "# Manually construct the data\n",
     "X = Merge_SVI_NRI_pca.to_numpy().astype(float)\n",
-    "mu = np.mean(X, axis=0)\n",
-    "sd = np.std(X, axis=0)\n",
+    "mu = np.mean(X, axis=0) # Mean\n",
+    "sd = np.std(X, axis=0) # Standard deviation\n",
     "\n",
-    "# Standardize the matrix to center all variables to 0\n",
+    "# Standardize the matrix to center all variables to 0 (Subtracted the mean for each variable from each corresponding variable value)\n",
     "X = (X - mu) / sd\n",
     "\n",
-    "n_folds = 20\n",
+    "n_folds = 20 # Set the number of folds. n_folds + 1 set the upper bound of fold number in the fold matrix. Ex, if folds = 20, then the number goes from 1 to 20+1 (not include 21)\n",
     "folds = np.random.randint(1, n_folds + 1, size=(X.shape[0], X.shape[1]))"
    ]
   },
@@ -995,6 +1001,7 @@
     }
    ],
    "source": [
+    "# Run the error testing function above and loop through all the k values given by the question.\n",
     "k_val = range(1, 18)\n",
     "empty_frame = []\n",
     "\n",
